load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "api.go",
        "apiconfig.go",
        "auth.go",
        "autoconfig.go",
        "cli.go",
        "content.go",
        "edit.go",
        "encoding.go",
        "export.go",
        "flag.go",
        "formatter.go",
        "input.go",
        "interactive.go",
        "lexer.go",
        "links.go",
        "logger.go",
        "operation.go",
        "param.go",
        "readable.go",
        "request.go",
        "transport.go",
    ],
    importpath = "github.com/danielgtaylor/restish/cli",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecaivazis_survey_v2//:survey",
        "@com_github_alecaivazis_survey_v2//terminal",
        "@com_github_alecthomas_chroma//:chroma",
        "@com_github_alecthomas_chroma//lexers",
        "@com_github_alecthomas_chroma//quick",
        "@com_github_alecthomas_chroma//styles",
        "@com_github_alexeyco_simpletable//:simpletable",
        "@com_github_amzn_ion_go//ion",
        "@com_github_andybalholm_brotli//:brotli",
        "@com_github_charmbracelet_glamour//:glamour",
        "@com_github_charmbracelet_glamour//ansi",
        "@com_github_danielgtaylor_go_jmespath_plus//:go-jmespath-plus",
        "@com_github_danielgtaylor_shorthand//:shorthand",
        "@com_github_eliukblau_pixterm//pkg/ansimage",
        "@com_github_fxamacker_cbor_v2//:cbor",
        "@com_github_gbl08ma_httpcache//:httpcache",
        "@com_github_gbl08ma_httpcache//diskcache",
        "@com_github_ghodss_yaml//:yaml",
        "@com_github_google_shlex//:shlex",
        "@com_github_gosimple_slug//:slug",
        "@com_github_hexops_gotextdiff//:gotextdiff",
        "@com_github_hexops_gotextdiff//myers",
        "@com_github_hexops_gotextdiff//span",
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_logrusorgru_aurora//:aurora",
        "@com_github_mattn_go_colorable//:go-colorable",
        "@com_github_mattn_go_isatty//:go-isatty",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_shamaton_msgpack_v2//:msgpack",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@com_github_tent_http_link_go//:http-link-go",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_x_crypto//ssh/terminal",
        "@org_golang_x_term//:term",
    ],
)

alias(
    name = "go_default_library",
    actual = ":cli",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cli_test",
    srcs = [
        "cli_test.go",
        "content_test.go",
        "edit_test.go",
        "encoding_test.go",
        "formatter_test.go",
        "input_test.go",
        "interactive_test.go",
        "links_test.go",
        "operation_test.go",
        "param_test.go",
        "readable_test.go",
        "request_test.go",
        "transport_test.go",
    ],
    embed = [":cli"],
    deps = [
        "@com_github_andybalholm_brotli//:brotli",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_h2non_gock_v1//:gock_v1",
    ],
)
